<resources>
    <string name="app_name">Week11_Architecture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blog">WELCOME TO MY BLOG</string>
    <string name="comment_title">Comment Title</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="backbutton">backButton</string>
    <string name="post_title">Post Title</string>
    <string name="what_s_on_your_mind">What\'s On Your Mind?</string>
    <string name="add_post">Add Post</string>
    <string name="what_s_on_your_mind_today">What\'s on your mind today?</string>
    <string name="add_comment">Add Comment</string>
    <string name="write_a_comment">Write a Comment</string>
</resources>