<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/girls"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddCommentFragment">

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:alpha="0.9"
        android:autofillHints=""
        android:background="@drawable/rounded_edges_small"
        android:backgroundTint="#ECC1C1"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="@font/courgette"
        android:gravity="top|start"
        android:hint="@string/write_a_comment"
        android:inputType="textMultiLine|textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/addComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whats_on_your_mind" />

    <Button
        android:id="@+id/addComment"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="17dp"
        android:alpha="0.9"
        android:background="@drawable/rounded_edges"
        android:backgroundTint="#F46363"
        android:fontFamily="@font/courgette"
        android:text="@string/add_comment"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.96" />

    <TextView
        android:id="@+id/whats_on_your_mind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/courgette"
        android:text="@string/add_a_comment"
        android:textAlignment="center"
        android:textColor="#F4EFEF"
        android:textColorHighlight="@android:color/holo_red_dark"
        android:textColorHint="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:alpha="0.7"
        android:background="@drawable/rounded_edges"
        android:tint="#CCFF0007"
        android:contentDescription="@string/backbutton"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
</androidx.constraintlayout.widget.ConstraintLayout>